# NCPP

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  generate_unix_makefiles.sh  generate_unix_makefiles_no_docs.sh  generate_vs2022.bat  generate_vs2022_no_docs.bat  init_submodules.bat
NCPP/: CMakeLists.txt
NCPP/Samples/: CMakeLists.txt
NCPP/Samples/FirstSample/: CMakeLists.txt
NCPP/Source/NCPP/: FirstTemplateArg.hpp  LastTemplateArg.hpp  NCPP.cpp  NCPP.hpp  NthTemplateArg.hpp  TemplateArgCount.hpp  TemplatedFor.hpp  Utilities.hpp
NCPP/Source/NCPP/DOD/: DOD.cpp  DOD.hpp  Data.hpp  IdMap.hpp  System.hpp  Table.hpp
NCPP/Source/NCPP/ECS/: Component.hpp  ECS.hpp  Entity.hpp  World.hpp
NCPP/Source/NCPP/RTTR/: Class.hpp  Function.hpp  Object.hpp  RTTR.hpp
ncpp/: CMakeLists.txt
ncpp/dev_test/: CMakeLists.txt
ncpp/dev_test/memory_management/: CMakeLists.txt
ncpp/dev_test/memory_management/basic_allocation/: CMakeLists.txt
ncpp/dev_test/memory_management/chunk_allocator/: CMakeLists.txt
ncpp/dev_test/memory_management/link_allocator/: CMakeLists.txt
ncpp/samples/: CMakeLists.txt
ncpp/samples/containers/: CMakeLists.txt
ncpp/samples/containers/concurrent_owf_stack/: CMakeLists.txt
ncpp/samples/containers/concurrent_ring_buffer/: CMakeLists.txt
ncpp/samples/containers/hash_table/: CMakeLists.txt
ncpp/samples/containers/owf_stack/: CMakeLists.txt
ncpp/samples/containers/ring_buffer/: CMakeLists.txt
ncpp/samples/dop/: CMakeLists.txt
ncpp/samples/dop/task/: CMakeLists.txt
ncpp/samples/event/: CMakeLists.txt
ncpp/samples/event/source/: bootstrap.cpp
ncpp/samples/first_sample/: CMakeLists.txt
ncpp/samples/first_sample/source/: bootstrap.cpp
ncpp/samples/hello_ncpp/: CMakeLists.txt
ncpp/samples/hello_ncpp/source/: bootstrap.cpp
ncpp/samples/memory_management/: CMakeLists.txt
ncpp/samples/memory_management/aligned_allocator/: CMakeLists.txt
ncpp/samples/memory_management/basic_allocation/: CMakeLists.txt
ncpp/samples/memory_management/chunk_allocator/: CMakeLists.txt
ncpp/samples/memory_management/dummy_allocator/: CMakeLists.txt
ncpp/samples/memory_management/frame_allocator/: CMakeLists.txt
ncpp/samples/memory_management/garbage_collection/: CMakeLists.txt
ncpp/samples/memory_management/gob_allocator/: CMakeLists.txt
ncpp/samples/memory_management/link_allocator/: CMakeLists.txt
ncpp/samples/memory_management/native/: CMakeLists.txt
ncpp/samples/memory_management/reference_allocator/: CMakeLists.txt
ncpp/samples/memory_management/stack_heap/: CMakeLists.txt
ncpp/samples/memory_management/tagged_heap/: CMakeLists.txt
ncpp/samples/pac/: CMakeLists.txt
ncpp/samples/pac/fiber/: CMakeLists.txt
ncpp/samples/pac/froutine/: CMakeLists.txt
ncpp/samples/pac/spinlock/: CMakeLists.txt
ncpp/samples/pac/thread/: CMakeLists.txt
ncpp/samples/profiler/scoped_profile/: CMakeLists.txt
ncpp/samples/rtti/: CMakeLists.txt
ncpp/samples/rtti/robject/: CMakeLists.txt
ncpp/samples/rtti/rtype_info/: CMakeLists.txt
ncpp/source/ncpp/: .config  .cpp  .hpp  .inl  alloc_debug_info_log.hpp  allocator_base.hpp  chunk_allocator.hpp  colorized_log.hpp  config_macros.hpp  declare_alloc_debug_info_operators.hpp  declare_eastl_container_operators.hpp  default_allocator.hpp  dummy_allocator.cpp  dummy_allocator.hpp  eastl_container_log.hpp  event.hpp  function.hpp  garbage_collection.cpp  garbage_collection.hpp  iostream.hpp  link_allocator.hpp  lock_guard.hpp  log.hpp  log_colors.hpp  logger.cpp  logger.hpp  mem.cpp  mem.hpp  memory_counting.cpp  memory_counting.hpp  memory_helper.hpp  native.hpp  native_allocator.cpp  native_allocator.hpp  native_heap.hpp  native_mem_janitor.hpp  native_memory_counting.cpp  native_memory_counting.hpp  ncpp.cpp  ncpp.hpp  (+14 more)
ncpp/source/ncpp/cbjs/: .hpp  coroutine.cpp  coroutine.hpp  job.hpp  system.cpp  system.hpp  worker_thread.cpp  worker_thread.hpp
ncpp/source/ncpp/containers/: .hpp  array_queue.hpp  array_stack.hpp  binding_helper.hpp  bridge_map.hpp  buffer.hpp  ca_queue.hpp  cfv_queue.hpp  concurrent_owf_stack.hpp  concurrent_ring_buffer.hpp  containers.hpp  cycle_array_queue.hpp  eastl_bindings.hpp  eastl_containers.hpp  eastl_views.hpp  fixed_buffer.hpp  fixed_vector_queue.hpp  fixed_vector_stack.hpp  fls_vector.hpp  handle_map.hpp  handle_map_array.hpp  handle_multimap.hpp  hash_table.hpp  native.hpp  owf_stack.hpp  pack.hpp  ring_buffer.hpp  static_bqueue.hpp  string_utilities.hpp  tgh.hpp  view.hpp
ncpp/source/ncpp/dod/: .hpp  data.hpp  dod.hpp
ncpp/source/ncpp/dop/: .hpp  cbjs.cpp  cbjs.hpp  coroutine.cpp  coroutine.hpp  job.cpp  job.hpp  job_description.hpp  job_handle.cpp  job_handle.hpp  job_instance.cpp  job_instance.hpp  job_instance_pool.cpp  job_instance_pool.hpp  job_system.cpp  job_system.hpp  job_system_declares.hpp  job_system_setting.hpp  job_wthread.cpp  job_wthread.hpp  job_wthread_scheduler.cpp  job_wthread_scheduler.hpp  task.hpp  task_system.hpp  tgh.cpp  tgh.hpp  worker_thread.cpp
ncpp/source/ncpp/ecs/: .hpp  component.hpp  ecs.hpp  entity.hpp  sd_buffer.hpp  sdm_buffer.hpp  system.hpp  world.hpp
ncpp/source/ncpp/event/: .hpp  event.hpp  event_option.hpp  event_storage.hpp
ncpp/source/ncpp/job_system/: coroutine.hpp  job_system.cpp  job_system.hpp  worker_thread.cpp  worker_thread.hpp
ncpp/source/ncpp/mem/: .cpp  .hpp  allocator.hpp  chunk_allocator.hpp  clusafi_allocator.hpp  crt_allocator.hpp  crt_memory_provider.hpp  crt_uniform_provider.hpp  default_allocator.hpp  dummy_allocator.cpp  dummy_allocator.hpp  ephemeral_allocator.hpp  frame_allocator.hpp  garbage_collection.hpp  general_allocator.hpp  gob_allocator.hpp  gtemp_allocator.hpp  incremental_chunk_allocator.hpp  link_allocator.hpp  linked_memory_provider.hpp  linked_uniform_provider.hpp  memory_adapter.hpp  memory_counting.cpp  memory_counting.hpp  memory_helper.hpp  memory_provider.hpp  memory_storage.hpp  pool_memory_provider.hpp  pool_uniform_provider.hpp  reference_allocator.hpp  (+5 more)
ncpp/tests/: CMakeLists.txt
ncpp/tests/hello_ncpp/: CMakeLists.txt
ncpp/tests/rtti/: CMakeLists.txt
(+300 files in other folders)
